--- a/TicketTracker/TicketTracker.Web/package.json
+++ b/TicketTracker/TicketTracker.Web/package.json
@@ -33,6 +33,8 @@
     "webpack-dev-server": "~2.9.3"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery-validation": "^1.17.0",
+    "jquery-validation-unobtrusive-umd-fix": "^1.0.1"
   }
 }
