--- a/TicketTracker/TicketTracker.Web/package.json
+++ b/TicketTracker/TicketTracker.Web/package.json
@@ -11,8 +11,11 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.2.18",
+    "@types/jqueryui": "^1.12.0",
     "@types/node": "~6.0.60",
     "awesome-typescript-loader": "^3.4.1",
+    "css-loader": "^0.28.8",
+    "file-loader": "^1.1.6",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -26,14 +29,18 @@
     "karma-typescript": "^3.0.9",
     "phantomjs-prebuilt": "^2.1.16",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.19.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "^2.6.2",
+    "url-loader": "^0.6.2",
     "webpack": "~3.10.0",
     "webpack-dev-server": "~2.9.3"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
     "jquery-validation": "^1.17.0",
     "jquery-validation-unobtrusive-umd-fix": "^1.0.1"
   }
